--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.21.1",
     "concurrently": "^6.2.1",
     "http-proxy-middleware": "^2.0.1",
+    "json-server": "^0.17.0",
     "react": "^17.0.2",
     "react-alert": "^7.0.3",
     "react-alert-template-basic": "^1.0.2",
