--- a/package.json
+++ b/package.json
@@ -29,14 +29,13 @@
     "typescript": "^4.3.5",
     "web-vitals": "^1.1.2"
   },
-  "proxy": "http://localhost:5000",
+  "proxy": "http://localhost:8000",
   "scripts": {
-    "dev": "react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "start": "concurrently \"json-server db.json --port 4000 --watch\" \"npm run start\"",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install && npm run build"
+    "dev": "concurrently \"json-server db.json --port 8000 --watch\" \"npm run start\"",
   },
   "compilerOptions": {
     "baseUrl": "src"
