--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "dev": "concurrently \"json-server db.json --port 8000 --watch\" \"npm run start\"",
+    "dev": "concurrently \"json-server db.json --port 8000 --watch\" \"npm run start\""
   },
   "compilerOptions": {
     "baseUrl": "src"
